ADD_LIBRARY (cityhash-lib STATIC
    city.cc
)

set_property(TARGET cityhash-lib PROPERTY POSITION_INDEPENDENT_CODE ON)

SET(LIB_NAME cityhash)
IF(MSVC)
    SET(LIB_NAME "lib${LIB_NAME}_vc140")
ENDIF()
IF(${CMAKE_BUILD_TYPE} STREQUAL Debug)
    SET(LIB_NAME "${LIB_NAME}_d")
ENDIF()
SET_TARGET_PROPERTIES(cityhash-lib PROPERTIES OUTPUT_NAME "${LIB_NAME}")
