ADD_LIBRARY (lz4-lib STATIC
    lz4.c
    lz4hc.c
)

set_property(TARGET lz4-lib PROPERTY POSITION_INDEPENDENT_CODE ON)

SET(LIB_NAME lz4)
IF(MSVC)
    #SET(LIB_NAME "lib${LIB_NAME}_vc140")
ENDIF()
IF(${CMAKE_BUILD_TYPE} STREQUAL Debug)
    #SET(LIB_NAME "${LIB_NAME}_d")
ENDIF()
SET_TARGET_PROPERTIES(lz4-lib PROPERTIES OUTPUT_NAME "${LIB_NAME}")
